--- a/app/admin/template/administrative/document/invoice/pay.twig
+++ b/app/admin/template/administrative/document/invoice/pay.twig
@@ -44,8 +44,10 @@
 		</td>
 		<td>
 			{% set document_tags = [] %}
-			{% for tag in tags if unpaid_invoice.has_tag(tag)%}
-				{% set document_tags = document_tags|merge([tag]) %}
+			{% for tag in tags %}
+				{% if unpaid_invoice.has_tag(tag) %}
+					{% set document_tags = document_tags|merge([tag]) %}
+				{% endif %}
 			{% endfor %}
 
 			{% for document_tag in document_tags %}
