--- a/app/admin/template/financial/account/transaction/search_incoming_invoices.twig
+++ b/app/admin/template/financial/account/transaction/search_incoming_invoices.twig
@@ -27,8 +27,10 @@
 		<td>{{ document.supplier.company }}</td>
 		<td>
 			{% set document_tags = [] %}
-			{% for tag in tags if document.has_tag(tag)%}
-				{% set document_tags = document_tags|merge([tag]) %}
+			{% for tag in tags %}
+				{% if document.has_tag(tag) %}
+					{% set document_tags = document_tags|merge([tag]) %}
+				{% endif %}
 			{% endfor %}
 
 			{% for document_tag in document_tags %}
