TinyInvoice7.3: Replace autogrow with autosize, upgrade jQuery 3.5.0 => 3.5.1

--- a/app/admin/template/_default/layout.base.twig
+++ b/app/admin/template/_default/layout.base.twig
@@ -27,7 +27,7 @@
 	<script type="text/javascript" src="/jquery-zoom/jquery.zoom.min.js"></script>
 	<script type="text/javascript" src="/handlebars/handlebars.min.js"></script>
 	<script type="text/javascript" src="/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
-	<script type="text/javascript" src="/autogrow-textarea/jquery.autogrowtextarea.min.js"></script>
+	<script type="text/javascript" src="/autosize/dist/autosize.min.js"></script>
 	<script type="text/javascript" src="/jquery-ui/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/bootstrap-checkbox/js/bootstrap-checkbox.js"></script>
 	<script type="text/javascript" src="/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
