TinyInvoice7.3: add form and base twig macros

--- a/app/admin/template/administrative/customer.twig
+++ b/app/admin/template/administrative/customer.twig
@@ -1,6 +1,7 @@
 {% extends "_default/layout.base.twig" %}
 
 {% import '_default/macro.base.twig' as base %}
+{% import '_default/form.base.twig' as form %}
 
 {% block content %}
 
