--- a/app/admin/template/administrative/customer/modal.customer_contact.twig
+++ b/app/admin/template/administrative/customer/modal.customer_contact.twig
@@ -1,5 +1,7 @@
 {% extends "_default/modal.base.twig" %}
 
+{% import '_default/form.base.twig' as form %}
+
 {% block header %}{% trans "Manage invoice contact" %}{% endblock header %}
 
 {% block body %}
