--- a/app/admin/template/administrative/document/creditnote.twig
+++ b/app/admin/template/administrative/document/creditnote.twig
@@ -1,5 +1,7 @@
 {% extends "/administrative/document.twig" %}
 
+{% import '_default/macro.base.twig' as base %}
+
 {% block pager %}
 	{% if action == 'edit' %}
 
