--- a/app/admin/template/bookkeeping/account/detail.twig
+++ b/app/admin/template/bookkeeping/account/detail.twig
@@ -1,5 +1,7 @@
 {% extends "bookkeeping/account/index.twig" %}
 
+{% import '_default/macro.base.twig' as base %}
+
 {% block tab %}
 
 	{% if errors is defined %}
