--- a/app/admin/template/financial/account.twig
+++ b/app/admin/template/financial/account.twig
@@ -1,5 +1,7 @@
 {% extends "_default/layout.base.twig" %}
 
+{% import '_default/form.base.twig' as form %}
+
 {% block content %}
 
 	{% if action == 'import_finish' %}
