--- a/app/admin/template/administrative/customer/contact.twig
+++ b/app/admin/template/administrative/customer/contact.twig
@@ -1,5 +1,7 @@
 {% extends "administrative/customer.twig" %}
 
+{% import '_default/macro.base.twig' as base %}
+
 {% block tab %}
 
 {% set customer_contacts = customer.get_active_customer_contacts() %}
