--- a/app/admin/template/administrative/document/contract.twig
+++ b/app/admin/template/administrative/document/contract.twig
@@ -1,5 +1,6 @@
 {% extends "/administrative/document.twig" %}
 
+{% import '_default/macro.base.twig' as base %}
 
 {% block pager %}
 	{% if action == 'edit' %}
