--- a/app/admin/template/administrative/document/document.form.invoice.twig
+++ b/app/admin/template/administrative/document/document.form.invoice.twig
@@ -1,3 +1,5 @@
+{% import '_default/form.base.twig' as form %}
+
 	<hr>
 	<div class="form-group{% if 'supplier_id' in errors|keys %} has-error{% endif %}">
 		<label class="col-xs-3 control-label">{% trans "Supplier" %}</label>
