--- a/app/admin/template/sales/invoice/queue/recurring/modal.customer_contacts.twig
+++ b/app/admin/template/sales/invoice/queue/recurring/modal.customer_contacts.twig
@@ -1,5 +1,7 @@
 {% extends "_default/modal.base.twig" %}
 
+{% import '_default/macro.base.twig' as base %}
+
 {% block header %}{% trans "Select invoice contact" %}{% endblock header %}
 
 {% block body %}
