--- a/app/admin/template/sales/product/type.twig
+++ b/app/admin/template/sales/product/type.twig
@@ -1,6 +1,7 @@
 {% extends "_default/layout.base.twig" %}
 
 {% import '_default/macro.base.twig' as base %}
+{% import '_default/form.base.twig' as form %}
 
 {% block content %}
 
