--- a/app/admin/template/administrative/customer/modal.customer_contact.twig
+++ b/app/admin/template/administrative/customer/modal.customer_contact.twig
@@ -203,6 +203,9 @@
 		$('#manage-customer-contact').on('show.bs.modal', function (e) {
 			$.when(country_ajax, language_ajax).done(function(xhrObject1, xhrObject2) {
 				$('#invoice-contact-form input, select').val('');
+				$('#invoice-contact-form select').each(function() {
+					$(this).val($(this).find('option:first').val());
+				});
 				$('.form-group').removeClass('has-error');
 				current_customer_contact_id = 0;
 
