Change order of login buttons Update po files

--- a/app/admin/template/login.twig
+++ b/app/admin/template/login.twig
@@ -40,10 +40,11 @@
 				<hr />
 
 				<div class="form-group">
-					<button type="submit" class="btn btn-primary">
+					<button type="submit" class="btn btn-primary pull-right">
 						{% trans "Login" %} <span class="glyphicon glyphicon-arrow-right"></span>
 					</button>
-					<a href="/mobile" class="btn btn-primary pull-right">
+
+					<a href="/mobile" class="btn btn-default">
 						<span class="glyphicon glyphicon-phone"></span> {% trans "Mobile interface" %}
 					</a>
 				</div>
