--- a/app/admin/template/_default/nav_bar.twig
+++ b/app/admin/template/_default/nav_bar.twig
@@ -131,7 +131,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{ env.session.user.username }}<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="/login?action=logout">{% trans "Log Out" %}</a></li>
+						<li><a href="/login?action=logout">{% trans "Log out" %}</a></li>
 					</ul>
 				</li>
 			</ul>
