F#23140 Changed js mask, so that a 34 character IBan is allowed

--- a/app/admin/template/administrative/supplier/detail.twig
+++ b/app/admin/template/administrative/supplier/detail.twig
@@ -119,7 +119,7 @@
 		</form>
 		<script type="text/javascript">
 			$(document).ready(function() {
-				$('input[name="supplier[iban]"]').mask('SSAA AAAA 0000 0000 0000 0000 00000', { placeholder: '____ ____ ____ ____ ____ ____ ____'  });
+				$('input[name="supplier[iban]"]').mask('SSAA AAAA 0000 0000 0000 0000 0000 0000 00', { placeholder: '____ ____ ____ ____ ____ ____ ____ ____ __'  });
 			});
 
 			function change_country() {
