--- a/app/admin/template/administrative/document/document.form.invoice.twig
+++ b/app/admin/template/administrative/document/document.form.invoice.twig
@@ -2,7 +2,7 @@
 
 	<hr>
 
-	<div class="form-group">
+	<div class="form-group {% if 'supplier_id' in errors|keys %}has-error{% endif %}">
 		<label class="col-xs-3 control-label">
 			{% trans "Supplier" %}
 		</label>
