--- a/app/admin/template/administrative/document.twig
+++ b/app/admin/template/administrative/document.twig
@@ -496,6 +496,11 @@
 
 				</td>
 				<td width="20">
+					<a href="/administrative/document?action=download&id={{ document.id }}">
+						<span class="glyphicon glyphicon-download"></span>
+					</a>
+				</td>
+				<td width="20">
 					<a href="/administrative/document?action=edit&id={{ document.id }}" title="{% trans "Edit document" %}">
 						<span class="glyphicon glyphicon-pencil"></span>
 					</a>
