--- a/app/admin/template/administrative/document/documentation.twig
+++ b/app/admin/template/administrative/document/documentation.twig
@@ -70,7 +70,7 @@
 					<th>{% trans "Documentation for" %}</th>
 					<th>{{ pager.create_header('Title'|trans, 'title')|raw }}</th>
 					<th>{% trans "Tags" %}</th>
-					<th colspan="2">&nbsp;</th>
+					<th colspan="3">&nbsp;</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -99,6 +99,11 @@
 					{{ document_tag.name }}{% if not loop.last %}, {% endif %}
 				{% endfor %}
 
+			</td>
+			<td width="20">
+				<a href="/administrative/document?action=download&id={{ document.id }}">
+					<span class="glyphicon glyphicon-download"></span>
+				</a>
 			</td>
 			<td width="20">
 				<a href="{{ env.module.get_module_path() }}?action=edit&id={{ document.id }}" title="{% trans "Edit document" %}">
