--- a/app/admin/template/administrative/document/invoice.twig
+++ b/app/admin/template/administrative/document/invoice.twig
@@ -146,7 +146,7 @@
 					<th>{{ pager.create_header('Paid'|trans, 'document_incoming_invoice.paid')|raw }}</th>
 					<th class="text-right">{{ pager.create_header('Price'|trans, 'document_incoming_invoice.price_incl')|raw }}</th>
 					<th width="30">&nbsp;</th>
-					<th colspan="2">&nbsp;</th>
+					<th colspan="3">&nbsp;</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -183,6 +183,11 @@
 				&euro;{{ document.price_incl }}
 			</td>
 			<td>&nbsp;</td>
+			<td width="20">
+				<a href="/administrative/document?action=download&id={{ document.id }}">
+					<span class="glyphicon glyphicon-download"></span>
+				</a>
+			</td>
 			<td width="20">
 				<a href="{{ env.module.get_module_path() }}?action=edit&id={{ document.id }}" title="{% trans "Edit document" %}">
 					<span class="glyphicon glyphicon-pencil"></span>
