bugfix: panel-height for incoming documents

--- a/app/admin/template/administrative/incoming.twig
+++ b/app/admin/template/administrative/incoming.twig
@@ -68,7 +68,7 @@
 		{% endfor %}
 
 		<script type="text/javascript">
-			$(function(){
+			$(window).load(function(){
 				/**
 				 * Zoom thumbnails
 				 */
